--- a/shard.yml
+++ b/shard.yml
@@ -35,6 +35,9 @@ dependencies:
   lexbor:
     github: kostya/lexbor
     version: ~> 3.0
+  markd:
+    github: icyleaf/markd
+    version: ~> 0.4
 development_dependencies:
   ameba:
     github: crystal-ameba/ameba
