--- a/shard.yml
+++ b/shard.yml
@@ -38,6 +38,9 @@ dependencies:
   markd:
     github: icyleaf/markd
     version: ~> 0.4
+  lucky_cache:
+    github: luckyframework/lucky_cache
+    version: ~> 0.1
 development_dependencies:
   ameba:
     github: crystal-ameba/ameba
